--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block body%}
+{% block map%}
 
 <div class="login-container">
     <h1 style="font-size: 3em;font-weight:bold;text-align: center;" >elecTrek</h1>
